--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,53 +10,67 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:gravity="end"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/hint_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="10dp"
-            android:text="💡"
-            android:layout_marginEnd="40dp"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/hint_button"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:text="💡" />
 
     <TextView
         android:id="@+id/numQuestion_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
+        android:text="@string/numQuestion"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
-        android:textSize="14sp"
-        android:text="@string/numQuestion" />
-
-    <ImageView
-        android:id="@+id/question_img"
-        android:layout_width="250dp"
-        android:layout_height="180dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/astronauta" />
-
-    <TextView
-        android:id="@+id/question_text"
-        android:layout_width="wrap_content"
+        android:textSize="14sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/cardview_light_background"
-        android:textSize="24sp"
-        tools:text="Aqui debe ir el texto de la pregunta" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginBottom="50dp">
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+        <ImageView
+            android:id="@+id/question_img"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:background="@drawable/astronauta" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/question_text"
+            android:layout_width="355dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="24sp"
+            tools:text="Aqui debe ir el texto de la pregunta" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="80dp"
+        android:layout_gravity="center_vertical|bottom"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -97,6 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:layout_gravity="center_vertical|bottom"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -138,38 +153,29 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:orientation="horizontal">
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
+
         <Button
             android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:padding="10dp"
-            android:text="@string/btn_prev"
-            android:textSize="16sp"
             app:icon="@drawable/baseline_arrow_back_24"
-            app:iconGravity="start" />
+            android:layout_marginStart="5dp"/>
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.5" />
+            android:layout_weight="1" />
+
         <Button
             android:id="@+id/next_button"
-            android:layout_width="wrap_content"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:padding="10dp"
-            android:text="@string/btn_next"
-            android:textSize="16sp"
             app:icon="@drawable/baseline_arrow_forward_24"
-            app:iconGravity="end" />
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_marginEnd="5dp"/>
+
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
