--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -30,6 +30,18 @@
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="12sp"
+        tools:text="Correcta! :)"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
