Las opciones son dinamicas dependiendo de cuantas quiera son las que aparecera pensando en un futuro la dificultad, asegurandose de igual forma que siempre aparezca la opcion correcta.

--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -141,6 +141,7 @@
             tools:text="C) Opcion" />
 
         <Space
+            android:id="@+id/space_CyD"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5" />
