--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,85 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_dark_background"
+    android:orientation="horizontal"
     android:gravity="center"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
+    <Space
+        android:layout_width="50dp"
+        android:layout_height="match_parent" />
 
-        <Space
-            android:layout_width="100dp"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
-
             android:id="@+id/question_text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/app_name"
-            android:textAlignment="center"
+            android:text="QuizzApp"
             android:textColor="@color/cardview_light_background"
-            android:textSize="24sp" />
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginBottom="10dp" />
 
         <Space
-            android:layout_width="100dp"
-            android:layout_height="match_parent" />
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
+            android:contentDescription="Logo del juego"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
+
+    <Space
+        android:layout_width="30dp"
+        android:layout_height="match_parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="120dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnPlay"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:text="Jugar"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="10dp" />
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
-            <Button
-                android:id="@+id/btnPlay"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|bottom"
-                android:text="@string/btn_start" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/btnOptions"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:text="@string/btn_options" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btnOptions"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="Opciones"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
+    <Space
+        android:layout_width="50dp"
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+</LinearLayout>
