--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,31 +33,34 @@
 
     <TextView
         android:id="@+id/result_text"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="12sp"
-        tools:text="Correcta! :)"/>
+        tools:text="Correcta! :)" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginBottom="50dp">
+        android:orientation="horizontal">
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2" />
+
         <ImageView
             android:id="@+id/question_img"
             android:layout_width="250dp"
             android:layout_height="200dp"
             android:background="@drawable/astronauta" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -71,6 +74,7 @@
             android:textColor="@color/cardview_light_background"
             android:textSize="24sp"
             tools:text="Aqui debe ir el texto de la pregunta" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -81,8 +85,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
         android:layout_gravity="center_vertical|bottom"
+        android:layout_marginBottom="80dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -95,6 +99,7 @@
             android:id="@+id/optionA_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="A) Opcion" />
@@ -108,6 +113,7 @@
             android:id="@+id/optionB_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="B) Opcion" />
@@ -122,8 +128,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:layout_gravity="center_vertical|bottom"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -136,6 +142,7 @@
             android:id="@+id/optionC_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="C) Opcion" />
@@ -150,6 +157,7 @@
             android:id="@+id/optionD_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="D) Opcion" />
@@ -164,18 +172,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginBottom="12dp"
         android:gravity="center"
-        android:layout_gravity="center_vertical"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/prev_button"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:padding="10dp"
-            app:icon="@drawable/baseline_arrow_back_24"
-            android:layout_marginStart="5dp"/>
+            app:icon="@drawable/baseline_arrow_back_24" />
 
         <Space
             android:layout_width="0dp"
@@ -186,9 +194,9 @@
             android:id="@+id/next_button"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:padding="10dp"
-            app:icon="@drawable/baseline_arrow_forward_24"
-            android:layout_marginEnd="5dp"/>
+            app:icon="@drawable/baseline_arrow_forward_24" />
 
     </LinearLayout>
 </FrameLayout>
