--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -22,8 +22,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
-            android:text="💡"
-            android:layout_marginEnd="40dp"/>
+            android:layout_marginEnd="40dp"
+            android:text="💡" />
     </LinearLayout>
 
     <TextView
@@ -31,10 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:text="@string/numQuestion"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
-        android:textSize="14sp"
-        android:text="@string/numQuestion" />
+        android:textSize="14sp" />
 
     <ImageView
         android:id="@+id/question_img"
@@ -51,7 +51,7 @@
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="12sp"
-        tools:text="Correcta! :)"/>
+        tools:text="Correcta! :)" />
 
     <TextView
         android:id="@+id/question_text"
@@ -79,6 +79,7 @@
             android:id="@+id/optionA_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="A) Opcion" />
@@ -92,6 +93,7 @@
             android:id="@+id/optionB_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="B) Opcion" />
@@ -119,6 +121,7 @@
             android:id="@+id/optionC_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="C) Opcion" />
@@ -133,6 +136,7 @@
             android:id="@+id/optionD_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
             android:textSize="16sp"
             tools:text="D) Opcion" />
@@ -150,10 +154,12 @@
         android:layout_marginBottom="12dp"
         android:gravity="center"
         android:orientation="horizontal">
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2" />
+
         <Button
             android:id="@+id/prev_button"
             android:layout_width="wrap_content"
@@ -164,10 +170,12 @@
             android:textSize="16sp"
             app:icon="@drawable/baseline_arrow_back_24"
             app:iconGravity="start" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5" />
+
         <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
@@ -178,6 +186,7 @@
             android:textSize="16sp"
             app:icon="@drawable/baseline_arrow_forward_24"
             app:iconGravity="end" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
