--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4CAF50</color>
     <color name="red">#BF4242</color>
+    <color name="ColorOpcion">#3F51B5</color>
+    <color name="ColorOpcionS">#00BCD4</color>
 </resources>
