Hints implementadas correctamente, ya verifica si ha sido contestada, si tiene hints y descarta las opciones deshabilitando una opcion incorrecta.

--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/numQuestion"
         android:textAlignment="center"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="@color/white"
         android:textSize="14sp" />
 
     <TextView
@@ -71,7 +71,7 @@
             android:layout_width="355dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textColor="@color/cardview_light_background"
+            android:textColor="@color/white"
             android:textSize="24sp"
             tools:text="Aqui debe ir el texto de la pregunta" />
 
@@ -101,6 +101,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="A) Opcion" />
 
@@ -115,6 +116,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="B) Opcion" />
 
@@ -144,6 +146,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="C) Opcion" />
 
@@ -159,6 +162,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/ColorOpcion"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="D) Opcion" />
 
