--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -30,11 +30,19 @@
         android:id="@+id/numQuestion_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/numQuestion"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="14sp" />
+    <TextView
+        android:id="@+id/numHints_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hints_count"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="14dp"/>
 
     <ImageView
         android:id="@+id/question_img"
